--- a/index.html
+++ b/index.html
@@ -15,19 +15,35 @@
   </head>
   <body>
 
+    <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    </div> -->
+
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav>
         <div class="container-fluid">
-          <a class="navbar-brand lora" href="#">John's Photograph</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a>
-              <a class="nav-link disabled">Disabled</a>
+          <div class="navbar-flex">
+            <div class="navigation-brand">
+              <a href="#" class="lora text-decoration-none">John's Photography</a>
+            </div>
+            <div class="navigation-links">
+              <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#works">Works</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+              </ul>
+            </div>
+            <div class="navigation-social-media">
+              <a href="#" class="">
+
+              </a>
+              <a href="#" class="">
+
+              </a>
+              <a href="#" class="">
+                
+              </a>
             </div>
           </div>
         </div>
