--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
   </head>
   <body>
 
-    <!-- <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-    </div> -->
 
     <div class="container">
+      <!-- Start: Navbar -->
       <nav>
         <div class="container-fluid">
           <div class="navbar-flex">
@@ -35,30 +34,45 @@
               </ul>
             </div>
             <div class="navigation-social-media">
-              <a href="#" class="">
-
+              <a href="#">
+                <img src="./assets/img/icons/fb-icons.png" width="24" alt="">
               </a>
-              <a href="#" class="">
-
+              <a href="#">
+                <img src="./assets/img/icons/ig-icons.png" width="24" alt="">
               </a>
-              <a href="#" class="">
-                
+              <a href="#">
+                <img src="./assets/img/icons/twt-icons.png" width="24" alt="">
               </a>
             </div>
           </div>
         </div>
       </nav>
-    </div>
+      <!-- End: Navbar -->
 
-    <!-- Optional JavaScript; choose one of the two! -->
+      <!-- Start: Hero -->
+      <main>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="hero-text">
+                <h1>Nama saya John Doe, dan saya merupakan seorang Photographer Profesional.</h1>
+                <p>Mengedepankan estetika dan jiwa seni yang tinggi dalam memotret adalah hal yang patut dimiliki bagi setiap photographer, dan saya pun tentunya sudah menerapkan hal tersebut.</p>
+                <a href="#" class="btn-hubungi">Hubungi Saya</a>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div class="hero-banner">
+                <img src="./assets/img/hero/Right-Content.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+      <!-- End: Hero -->
+
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
   </body>
 </html>
