--- a/index.html
+++ b/index.html
@@ -15,62 +15,86 @@
   </head>
   <body>
 
-
-    <div class="container">
-      <!-- Start: Navbar -->
-      <nav>
-        <div class="container-fluid">
-          <div class="navbar-flex">
-            <div class="navigation-brand">
-              <a href="#" class="lora text-decoration-none">John's Photography</a>
-            </div>
-            <div class="navigation-links">
-              <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#services">Services</a></li>
-                <li><a href="#works">Works</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-              </ul>
-            </div>
-            <div class="navigation-social-media">
-              <a href="#">
-                <img src="./assets/img/icons/fb-icons.png" width="24" alt="">
-              </a>
-              <a href="#">
-                <img src="./assets/img/icons/ig-icons.png" width="24" alt="">
-              </a>
-              <a href="#">
-                <img src="./assets/img/icons/twt-icons.png" width="24" alt="">
-              </a>
-            </div>
-          </div>
-        </div>
-      </nav>
-      <!-- End: Navbar -->
-
-      <!-- Start: Hero -->
-      <main>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-lg-6">
-              <div class="hero-text">
-                <h1>Nama saya John Doe, dan saya merupakan seorang Photographer Profesional.</h1>
-                <p>Mengedepankan estetika dan jiwa seni yang tinggi dalam memotret adalah hal yang patut dimiliki bagi setiap photographer, dan saya pun tentunya sudah menerapkan hal tersebut.</p>
-                <a href="#" class="btn-hubungi">Hubungi Saya</a>
+    <!-- Header Content -->
+    <header>
+      <div class="container">
+        <!-- Start: Navbar -->
+        <nav>
+          <div class="container-fluid">
+            <div class="navbar-flex">
+              <div class="navigation-brand">
+                <a href="#" class="lora text-decoration-none">John's Photography</a>
               </div>
-            </div>
-            <div class="col-lg-6">
-              <div class="hero-banner">
-                <img src="./assets/img/hero/Right-Content.png" alt="">
+              <div class="navigation-links">
+                <ul>
+                  <li><a href="#home">Home</a></li>
+                  <li><a href="#services">Services</a></li>
+                  <li><a href="#works">Works</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#contact">Contact</a></li>
+                </ul>
+              </div>
+              <div class="navigation-social-media">
+                <a href="#">
+                  <img src="./assets/img/icons/fb-icons.png" width="24" alt="">
+                </a>
+                <a href="#">
+                  <img src="./assets/img/icons/ig-icons.png" width="24" alt="">
+                </a>
+                <a href="#">
+                  <img src="./assets/img/icons/twt-icons.png" width="24" alt="">
+                </a>
               </div>
             </div>
           </div>
-        </div>
-      </main>
-      <!-- End: Hero -->
+        </nav>
+        <!-- End: Navbar -->
+      </div>
+    </header>
+    
+    <main>
+      <!-- Wrapper -->
+      <div class="container">
+        <!-- Start: Hero -->
+        <section id="hero">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-6">
+                <div class="hero-text">
+                  <h1>Nama saya John Doe, dan saya merupakan seorang Photographer Profesional.</h1>
+                  <p>Mengedepankan estetika dan jiwa seni yang tinggi dalam memotret adalah hal yang patut dimiliki bagi setiap photographer, dan saya pun tentunya sudah menerapkan hal tersebut.</p>
+                  <a href="#" class="btn-hubungi">Hubungi Saya</a>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="hero-banner">
+                  <img src="./assets/img/hero/Right-Content.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!-- End: Hero -->
+      </div>
 
-    </div>
+      <!-- Services Section -->
+      <section id="services">
+        <div class="container">
+          <div class="heading">
+            <h2>Services</h2>
+            <p>Jasa dan layanan yang Kami tawarkan</p>
+          </div>
+          <div class="layanan">
+            <div class="row">
+              <div class="col-lg-4">
+                
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
