Membuat struktur dasar untuk services section dan menambahakan beberapa image terkait

--- a/index.html
+++ b/index.html
@@ -85,9 +85,61 @@
             <p>Jasa dan layanan yang Kami tawarkan</p>
           </div>
           <div class="layanan">
-            <div class="row">
-              <div class="col-lg-4">
-                
+            <div class="row d-flex justify-content-center">
+              <div class="col-lg-4 mb-5">
+                <div class="card-service">
+                  <div class="c-head">
+                    <img src="./assets/img/services/wedding.png" alt="">
+                  </div>
+                  <div class="c-body">
+                    <h3>Wedding Photography</h3>
+                    <p>Pemotretan pernikahan adalah salah satu jasa terbaik dari kami. Mengusung tema apapun sesuai kemauan client.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="card-service">
+                  <div class="c-head">
+                    <img src="./assets/img/services/wedding.png" alt="">
+                  </div>
+                  <div class="c-body">
+                    <h3>Wedding Photography</h3>
+                    <p>Pemotretan pernikahan adalah salah satu jasa terbaik dari kami. Mengusung tema apapun sesuai kemauan client.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="card-service">
+                  <div class="c-head">
+                    <img src="./assets/img/services/wedding.png" alt="">
+                  </div>
+                  <div class="c-body">
+                    <h3>Wedding Photography</h3>
+                    <p>Pemotretan pernikahan adalah salah satu jasa terbaik dari kami. Mengusung tema apapun sesuai kemauan client.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="card-service">
+                  <div class="c-head">
+                    <img src="./assets/img/services/wedding.png" alt="">
+                  </div>
+                  <div class="c-body">
+                    <h3>Wedding Photography</h3>
+                    <p>Pemotretan pernikahan adalah salah satu jasa terbaik dari kami. Mengusung tema apapun sesuai kemauan client.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="card-service">
+                  <div class="c-head">
+                    <img src="./assets/img/services/wedding.png" alt="">
+                  </div>
+                  <div class="c-body">
+                    <h3>Wedding Photography</h3>
+                    <p>Pemotretan pernikahan adalah salah satu jasa terbaik dari kami. Mengusung tema apapun sesuai kemauan client.</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
