--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- End: Hero -->
       </div>
 
-      <!-- Services Section -->
+      <!-- Start: Services Section -->
       <section id="services">
         <div class="container">
           <div class="heading">
@@ -89,7 +89,7 @@
               <div class="col-lg-4 mb-5">
                 <div class="card-service">
                   <div class="c-head">
-                    <img src="./assets/img/services/wedding.png" alt="">
+                    <img src="./assets/img/services/wedding.png" alt="foto orang sedang menikah">
                   </div>
                   <div class="c-body">
                     <h3>Wedding Photography</h3>
@@ -100,44 +100,44 @@
               <div class="col-lg-4 mb-5">
                 <div class="card-service">
                   <div class="c-head">
-                    <img src="./assets/img/services/wedding.png" alt="">
+                    <img src="./assets/img/services/prewed.png" alt="foto prewedding">
                   </div>
                   <div class="c-body">
-                    <h3>Wedding Photography</h3>
-                    <p>Pemotretan pernikahan adalah salah satu jasa terbaik dari kami. Mengusung tema apapun sesuai kemauan client.</p>
+                    <h3>Pre-Wed Photoshoot</h3>
+                    <p>Pre-Wed Photoshoot itu merupakan salah satu hal yang penting sebelum dilakukannya resepsi pernikahan. Kami dapat mengakomodir itu semua secara terstruktur dan indah.</p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 mb-5">
                 <div class="card-service">
                   <div class="c-head">
-                    <img src="./assets/img/services/wedding.png" alt="">
+                    <img src="./assets/img/services/product.png" alt="foto Product">
                   </div>
                   <div class="c-body">
-                    <h3>Wedding Photography</h3>
-                    <p>Pemotretan pernikahan adalah salah satu jasa terbaik dari kami. Mengusung tema apapun sesuai kemauan client.</p>
+                    <h3>Product Photography</h3>
+                    <p>Product Anda sangatlah penting tentunya bagi perusahaan, dokumentasi gambar yang baik harusnya jadi kewajiban, bukan?</p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 mb-5">
                 <div class="card-service">
                   <div class="c-head">
-                    <img src="./assets/img/services/wedding.png" alt="">
+                    <img src="./assets/img/services/realtime.png" alt="">
                   </div>
                   <div class="c-body">
-                    <h3>Wedding Photography</h3>
-                    <p>Pemotretan pernikahan adalah salah satu jasa terbaik dari kami. Mengusung tema apapun sesuai kemauan client.</p>
+                    <h3>Real-time Photography</h3>
+                    <p>Anda ingin dipotret layaknya seorang model di dalam studio? jasa Kami yang satu ini tentunya cocok sekali bagi Anda.</p>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 mb-5">
                 <div class="card-service">
                   <div class="c-head">
-                    <img src="./assets/img/services/wedding.png" alt="">
+                    <img src="./assets/img/services/architecture.png" alt="">
                   </div>
                   <div class="c-body">
-                    <h3>Wedding Photography</h3>
-                    <p>Pemotretan pernikahan adalah salah satu jasa terbaik dari kami. Mengusung tema apapun sesuai kemauan client.</p>
+                    <h3>Architecture Photography</h3>
+                    <p>Mengabadikan dengan indah arsitektur bangunan pada perusahaan atau bangunan Anda bersamaa Kami.</p>
                   </div>
                 </div>
               </div>
@@ -145,6 +145,9 @@
           </div>
         </div>
       </section>
+      <!-- End: Services Section -->
+
+     
     </main>
 
 
