Membuat struktur untuk works section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,65 @@
       </section>
       <!-- End: Services Section -->
 
-     
+      <!-- Start: Works Section -->
+      <section id="works">
+        <div class="container">
+          <div class="heading">
+            <h2>Works</h2>
+            <p>Berikut adalah karya-karya yang dari Kami</p>
+          </div>
+          <div class="my-works">
+            <div class="row">
+              <div class="col-lg-4 mb-5">
+                <div class="image-parent">
+                  <img src="./assets/img/works/1.png" class="w-100" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="image-parent">
+                  <img src="./assets/img/works/1.png" class="w-100" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="image-parent">
+                  <img src="./assets/img/works/1.png" class="w-100" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="image-parent">
+                  <img src="./assets/img/works/1.png" class="w-100" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="image-parent">
+                  <img src="./assets/img/works/1.png" class="w-100" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="image-parent">
+                  <img src="./assets/img/works/1.png" class="w-100" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="image-parent">
+                  <img src="./assets/img/works/1.png" class="w-100" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="image-parent">
+                  <img src="./assets/img/works/1.png" class="w-100" alt="">
+                </div>
+              </div>
+              <div class="col-lg-4 mb-5">
+                <div class="image-parent">
+                  <img src="./assets/img/works/1.png" class="w-100" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End: Works Section -->
     </main>
 
 
