Menambahkan button call to action

--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
                   <img src="./assets/img/works/9.png" class="w-100" alt="">
                 </div>
               </div>
+
+              <!-- Button CTA -->
+              <div class="w-100 d-flex justify-content-center align-items-center">
+                <a href="#" class="btn-cta">Jelajahi lebih banyak...</a>
+              </div>
             </div>
           </div>
         </div>
