Membuat struktur pada about section

--- a/index.html
+++ b/index.html
@@ -211,6 +211,27 @@
         </div>
       </section>
       <!-- End: Works Section -->
+
+      <!-- Start: About -->
+      <section id="about">
+        <div class="container">
+          <div class="biography lora">
+            <div class="bio-image">
+              <img src="./assets/img/biography/ane.png" alt="Saya">
+            </div>
+            <div class="bio-text">
+              <h3>About Me</h3>
+              <div class="paragraph">
+                <p class="mb-5">Perkenalkan, nama saya adalah John Doe. Saya adalah seorang Freelance Profesional Photographer dari Cianjur. Terhitung hingga saat ini saya sudah berkecimpung lebih dari 5 tahun dalam dunia fotografi.</p>
+                <p>Pada awalnya, saya tertarik untuk menjadi seorang photographer karena Ayah saya mempunyai kamera jadul di rumah dan saya seringkali mencobanya untuk sekedar memotret asal. Tapi dari situlah saya yakin bahwa dunia fotografi lah merupakan passion saya sesungguhnya.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Start: About -->
+
+      
     </main>
 
 
