Membuat dan merancang struktur untuk contact section

--- a/index.html
+++ b/index.html
@@ -231,7 +231,86 @@
       </section>
       <!-- Start: About -->
 
-      
+      <!-- Start: Contact -->
+      <section id="contact">
+        <div class="container">
+          <div class="heading mb-5">
+            <h2>Contact</h2>
+            <p>Semua kontak kami bisa Anda temukan disini!</p>
+          </div>
+          <div class="row d-flex justify-content-center align-items-center" style="margin-bottom: 60px;">
+            <div class="col-lg-10">
+              <div class="card-contact">
+                <div class="row p-4">
+                  <div class="col-md-6">
+                    <div class="contact-item">
+                      <h4 class="me-4">Alamat: </h4>
+                      <p><a class="links" target="_blank" href="">Jalan Ciberegbeg Timur No. 23, Kecamatan Cianjur, Kabupater Cianjur, Jawa Barat</a></p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="contact-item">
+                      <h4 class="me-4">Email: </h4>
+                      <p><a class="links" target="_blank" href="">johndoe@gmail.co.id</a></p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="contact-item">
+                      <h4 class="me-4">Trakteer: </h4>
+                      <p><a class="links" target="_blank" href="">https://trakteer.com/johndoephotos12345</a></p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="contact-item">
+                      <h4 class="me-4">LinkedIn: </h4>
+                      <p><a class="links" target="_blank" href="">https://linkedin.com/johndoephotos-232311</a></p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="contact-item">
+                      <h4 class="me-4">Unsplash: </h4>
+                      <p><a class="links" target="_blank" href="">https://unsplash.com/john_doe</a></p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="contact-item">
+                      <h4 class="me-4">WhatsApp: </h4>
+                      <p><a class="links" target="_blank" href="">089823212254</a></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-lg-10">
+              <div class="card-form">
+                <div class="accent-pills">
+                  <p>Hubungi Kami</p>
+                </div>
+                <form action="" class="custom-form">
+                  <div class="controlled-form mb-4">
+                    <label class="custom-label" for="nama">Nama Lengkap:</label>
+                    <input type="text" class="custom-input" name="nama" id="nama">
+                  </div>
+                  <div class="controlled-form mb-4">
+                    <label class="custom-label" for="nama">Alamat Email:</label>
+                    <input type="email" class="custom-input" name="nama" id="nama">
+                  </div>
+                  <div class="controlled-form mb-4">
+                    <label class="custom-label" for="nama">Pesan Untuk Kami:</label>
+                    <textarea name="pesan" class="custom-textarea" id="pesan"></textarea>
+                  </div>
+                  <div class="controlled-form">
+                    <button class="btn-kontak align-self-end" type="submit">Kirim</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End: Contact -->
     </main>
 
 
