--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       </div>
     </header>
     
+    <!-- Main Content -->
     <main>
       <!-- Wrapper -->
       <div class="container">
@@ -312,6 +313,27 @@
       </section>
       <!-- End: Contact -->
     </main>
+
+    <!-- Footer Section -->
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <a href="#" class="footer-brand lora">John's Photography</a>
+          <div class="footer-links">
+            <ul>
+              <li><a href="#home">Home</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#works">Works</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="copyright text-white">
+          <p>&copy; Copyright 2022 - All right reserved</p>
+        </div>
+      </div>
+    </footer>
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
