--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="hero-text">
-                  <h1>Nama saya John Doe, dan saya merupakan seorang Photographer Profesional.</h1>
+                  <h1>Nama saya John Doe, dan saya adalah seorang Photographer Profesional.</h1>
                   <p>Mengedepankan estetika dan jiwa seni yang tinggi dalam memotret adalah hal yang patut dimiliki bagi setiap photographer, dan saya pun tentunya sudah menerapkan hal tersebut.</p>
                   <a href="#" class="btn-hubungi">Hubungi Saya</a>
                 </div>
