Membuat file responsive.css untuk styling pada kondisi screen size tertentu

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     
     <title>Hello, world!</title>
   </head>
