Menambahkan element divider ketika saat small screen dan menyelesaikan styling responsive pada navbar

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         </nav>
         <!-- End: Navbar -->
       </div>
+      <div class="sm-divider"></div>
     </header>
     
     <!-- Main Content -->
