Menyelesaikan responsive styling untuk hero section

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
         <!-- Start: Hero -->
         <section id="hero">
           <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-6">
+            <div class="row reversing">
+              <div class="col-lg-6 col-sm-12">
                 <div class="hero-text">
                   <h1>Nama saya John Doe, dan saya adalah seorang Photographer Profesional.</h1>
                   <p>Mengedepankan estetika dan jiwa seni yang tinggi dalam memotret adalah hal yang patut dimiliki bagi setiap photographer, dan saya pun tentunya sudah menerapkan hal tersebut.</p>
                   <a href="#" class="btn-hubungi">Hubungi Saya</a>
                 </div>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-6 col-sm-12">
                 <div class="hero-banner">
                   <img src="./assets/img/hero/Right-Content.png" alt="">
                 </div>
