Menyelesaikan responsive styling pada works section

--- a/index.html
+++ b/index.html
@@ -160,47 +160,47 @@
           </div>
           <div class="my-works">
             <div class="row">
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-sm-6 mb-5">
                 <div class="image-parent">
                   <img src="./assets/img/works/1.png" class="w-100" alt="">
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-sm-6 mb-5">
                 <div class="image-parent">
                   <img src="./assets/img/works/2.png" class="w-100" alt="">
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-sm-6 mb-5">
                 <div class="image-parent">
                   <img src="./assets/img/works/3.png" class="w-100" alt="">
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-sm-6 mb-5">
                 <div class="image-parent">
                   <img src="./assets/img/works/4.png" class="w-100" alt="">
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-sm-6 mb-5">
                 <div class="image-parent">
                   <img src="./assets/img/works/5.png" class="w-100" alt="">
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-sm-6 mb-5">
                 <div class="image-parent">
                   <img src="./assets/img/works/6.png" class="w-100" alt="">
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-sm-6 mb-5">
                 <div class="image-parent">
                   <img src="./assets/img/works/7.png" class="w-100" alt="">
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-sm-6 mb-5">
                 <div class="image-parent">
                   <img src="./assets/img/works/8.png" class="w-100" alt="">
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-sm-6 mb-5">
                 <div class="image-parent">
                   <img src="./assets/img/works/9.png" class="w-100" alt="">
                 </div>
