Menyelesaikan styling pada responsive.css dengan screen size large

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
           <div class="layanan">
             <div class="row d-flex justify-content-center">
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-md-6 mb-5">
                 <div class="card-service">
                   <div class="c-head">
                     <img src="./assets/img/services/wedding.png" alt="foto orang sedang menikah">
@@ -101,7 +101,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-md-6 mb-5">
                 <div class="card-service">
                   <div class="c-head">
                     <img src="./assets/img/services/prewed.png" alt="foto prewedding">
@@ -112,7 +112,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-md-6 mb-5">
                 <div class="card-service">
                   <div class="c-head">
                     <img src="./assets/img/services/product.png" alt="foto Product">
@@ -123,7 +123,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-md-6 mb-5">
                 <div class="card-service">
                   <div class="c-head">
                     <img src="./assets/img/services/realtime.png" alt="">
@@ -134,7 +134,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-4 mb-5">
+              <div class="col-lg-4 col-md-6 mb-5">
                 <div class="card-service">
                   <div class="c-head">
                     <img src="./assets/img/services/architecture.png" alt="">
