--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- My CSS -->
-    <!-- <link rel="stylesheet" href="./assets/css/style.css"> -->
+    <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Responsive CSS -->
-    <!-- <link rel="stylesheet" href="./assets/css/responsive.css"> -->
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 
-    <!-- Production CSS -->
-    <link rel="stylesheet" href="./assets/css/production.css">
-    
     <title>John's Photography Portfolio</title>
   </head>
   <body>
