--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="hero-text">
                   <h1>Nama saya John Doe, dan saya adalah seorang Photographer Profesional.</h1>
                   <p>Mengedepankan estetika dan jiwa seni yang tinggi dalam memotret adalah hal yang patut dimiliki bagi setiap photographer, dan saya pun tentunya sudah menerapkan hal tersebut.</p>
-                  <a href="#" class="btn-hubungi">Hubungi Saya</a>
+                  <a href="#" class="btn-hubungi sm-w-100">Hubungi Saya</a>
                 </div>
               </div>
               <div class="col-lg-6 col-sm-12">
@@ -156,7 +156,7 @@
         <div class="container">
           <div class="heading">
             <h2>Works</h2>
-            <p>Berikut adalah karya-karya yang dari Kami</p>
+            <p class="sm-center">Berikut adalah karya-karya yang dari Kami</p>
           </div>
           <div class="my-works">
             <div class="row">
@@ -240,7 +240,7 @@
         <div class="container">
           <div class="heading mb-5">
             <h2>Contact</h2>
-            <p>Semua kontak kami bisa Anda temukan disini!</p>
+            <p class="sm-center">Semua kontak kami bisa Anda temukan disini!</p>
           </div>
           <div class="row d-flex justify-content-center align-items-center" style="margin-bottom: 60px;">
             <div class="col-lg-10">
