Menambahkan section pricing pada page gallery

--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
 
     <main>
       <div class="container">
-        <section id="gallery">
+        <section id="gallery" class="mb-120">
           <h2>Category: Wedding Photography</h2>
           <div class="content-wrapper">
             <figure class="content">
@@ -100,6 +100,104 @@
             <figure class="content">
               <img src="./assets/img/gallery/12.png" alt="" />
             </figure>
+          </div>
+        </section>
+        <section id="pricing" class="mb-120">
+          <div class="heading">
+            <h2>Pricing</h2>
+            <p>List harga yang kami tawarkan</p>
+          </div>
+          <div class="pricing-wrapper">
+            <div class="card-price">
+              <div class="card-price-header">
+                <h4>Wedding Price</h4>
+                <p>Biaya yang cukup terjangkau untuk fotografi pernikahan Anda</p>
+                <h2 class="price-value">Rp. 1 JT</h2>
+              </div>
+              <div class="card-price-body">
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Biaya murah dan kualitas terjamin</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Bisa kustom tema sesuai keinginan</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Bonus video cinematic jika butuh</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Kualitas kamera bagus serta berkelas</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Hasil akan cepat jadi tidak perlu
+                    menuggu lama</p>
+                </div>
+              </div>
+            </div>
+            <div class="card-price">
+              <div class="card-price-header">
+                <h4>Wedding Price</h4>
+                <p>Biaya yang cukup terjangkau untuk fotografi pernikahan Anda</p>
+                <h2 class="price-value">Rp. 1 JT</h2>
+              </div>
+              <div class="card-price-body">
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Biaya murah dan kualitas terjamin</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Bisa kustom tema sesuai keinginan</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Bonus video cinematic jika butuh</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Kualitas kamera bagus serta berkelas</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Hasil akan cepat jadi tidak perlu
+                    menuggu lama</p>
+                </div>
+              </div>
+            </div>
+            <div class="card-price">
+              <div class="card-price-header">
+                <h4>Wedding Price</h4>
+                <p>Biaya yang cukup terjangkau untuk fotografi pernikahan Anda</p>
+                <h2 class="price-value">Rp. 1 JT</h2>
+              </div>
+              <div class="card-price-body">
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Biaya murah dan kualitas terjamin</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Bisa kustom tema sesuai keinginan</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Bonus video cinematic jika butuh</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Kualitas kamera bagus serta berkelas</p>
+                </div>
+                <div class="benefit">
+                  <img class="checklist" src="./assets/img/gallery/icon/ant-design_check-outlined.svg" alt="svg icon">
+                  <p>Hasil akan cepat jadi tidak perlu
+                    menuggu lama</p>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
       </div>
